--- a/src/components/tts/tts.css
+++ b/src/components/tts/tts.css
@@ -44,5 +44,6 @@
 }
 
 .krds-tts-label {
+  line-height: 1;
   white-space: nowrap;
 }
